Add controller for MysqlRoleBinding
